--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <ul class="nav-list">
                 <li><a href="#">home</a></li>
                 <li><a href="#portfolio">portfolio</a></li>
+                <li><a href="#skills">Skills</a></li> 
                 <li><a href="#contact">contact</a></li>  
             </ul> 
           </nav>
@@ -28,10 +29,10 @@
         </div>
 
         <main> 
-            <section class="intro-content">
+            <div class="intro-content">
             <p>Hi, I'm a front-end developer who loves responsive design and css.I recently finished learning front-end web development at treehouse and am excited to put all my skills to use! </p>
             <img src="images/responsive_layout_v3-2/images/busyman.webp" alt="profile-picture">
-            </section>
+            </div>
             <section >
                    <h2 id="portfolio">Portfolio</h2>
                    <div class="main-content">
@@ -71,6 +72,21 @@
                     </div>
                 </div> 
             </section>
+            <section>
+                <h2 id="skills">Skills</h2>
+                <ul class="skills-list">
+                    <li>Analytical thinking and planning.</li>
+                    <li>Strong communication</li>
+                    <li>Accuracy and attention to detail.</li>
+                    <li>Organization and prioritization</li>
+                    <li>Problem solving</li>
+                    <li>Team leadership</li>
+                    <li>Creativity</li>
+                    <li>Customer Service</li>
+                    <li>Time management</li>
+                    <li>Interpersonal skills</li>
+                </ul>
+            </section>
         </main>
 
         <footer class="footer-content">
@@ -85,7 +101,8 @@
                 <ul id="closing-nav">
                     <li><a href="#">home</a></li>
                     <li><a href="#portfolio">portfolio</a></li>
-                    <li><a href="#contact">contact</a></li>  
+                    <li><a href="#skills">Skills</a></li> 
+                    <li><a href="#contact">contact</a></li> 
                 </ul>
                 <p><a href="#">back to top</a></p>
             </div>
