--- a/index.html
+++ b/index.html
@@ -62,13 +62,13 @@
                    <div class="main-port item-4"> 
                         <img src="images/responsive_layout_v3-2/images/portfolio-5.png" alt="the-photo-gallery">
                         <p><strong>Photo Gallery</strong></p>
-                        <p>This project shows pictures froma a recent trip to the viewer and allows them to easily navigate through photos.</p>
+                        <p>This project shows pictures from a recent trip to the viewer and allows them to easily navigate through photos.</p>
                         </div>
 
                     <div class="main-port item-5">
                         <img src="images/responsive_layout_v3-2/images/portfolio-6.png" alt="the-calculator">
                         <p><strong>Calculator</strong></p>
-                        <p>Someone can enter in the numbers they want,and press the big blue button and get the result they want.</p>
+                        <p>Someone can enter in the numbers they want, press the big blue button and get the result they want.</p>
                     </div>
                 </div> 
             </section>
@@ -76,22 +76,22 @@
                 <h2 id="skills">Skills</h2>
                 <ul class="skills-list">
                     <li>Analytical thinking and planning.</li>
-                    <li>Strong communication</li>
+                    <li>Strong communication.</li>
                     <li>Accuracy and attention to detail.</li>
-                    <li>Organization and prioritization</li>
-                    <li>Problem solving</li>
-                    <li>Team leadership</li>
-                    <li>Creativity</li>
-                    <li>Customer Service</li>
-                    <li>Time management</li>
-                    <li>Interpersonal skills</li>
+                    <li>Organization and prioritization.</li>
+                    <li>Problem solving.</li>
+                    <li>Team leadership.</li>
+                    <li>Creativity.</li>
+                    <li>Customer Service.</li>
+                    <li>Time management.</li>
+                    <li>Interpersonal skills.</li>
                 </ul>
             </section>
         </main>
 
         <footer class="footer-content">
             <h3 id="contact">Contact</h3>
-            <p >If you're interested in chatting or want more information about what I've been working on,I'd love to hear from you!</p>
+            <p >If you're interested in chatting or want more information about what I've been working on, I'd love to hear from you!</p>
             <div class="contact-details">
             <p> Phone <strong>+1(111)555-1234</strong></p>
             <p>Email <strong>email@yoursite.com</strong></p>
