fixed slight spacing isuue due to paragraphs

--- a/index.html
+++ b/index.html
@@ -36,38 +36,38 @@
             <section >
                    <h2 id="portfolio">Portfolio</h2>
                    <div class="main-content">
-                    <div class="main-port item-0"> 
+                    <div class="main-port"> 
                     <img src="images/responsive_layout_v3-2/images/portfolio-1.png" alt="the-marketing-page"> 
-                    <p><strong>Marketing Page</strong></p>
+                    <p class="heading-para"><strong>Marketing Page</strong></p>
                     <p>This project shows the front page of a marketing website meant for a specific business I'm interested in.</p>
                     </div>
 
-                    <div class="main-port item-1"> 
+                    <div class="main-port"> 
                     <img src="images/responsive_layout_v3-2/images/portfolio-2.png" alt="the-search-page">
-                    <p><strong>Search Page</strong></p>
+                    <p class="heading-para"><strong>Search Page</strong></p>
                     <p>This Project searces through a specific database to find information that the user is trying to look up.</p>
                     </div>
                 
-                    <div class="main-port item-2"> 
+                    <div class="main-port"> 
                         <img src="images/responsive_layout_v3-2/images/portfolio-3.png" alt="travel-app-image">
-                        <p><strong>Travel App</strong></p>
+                        <p class="heading-para"><strong>Travel App</strong></p>
                         <p>This project compares travel times based on different transportation methods and tells you the best one.</p>
                     </div>
-                    <div class="main-port item-3"> 
+                    <div class="main-port"> 
                         <img src="images/responsive_layout_v3-2/images/portfolio-4.png" alt="my-favourite-spots">
-                        <p><strong>Map of Favourite Spots</strong></p>
+                        <p class="heading-para"><strong>Map of Favourite Spots</strong></p>
                         <p>This project uses mapping axis to plot points for my favourite spots in the city for a do-it yourself walking tour.</p>
                     </div>
                     
-                   <div class="main-port item-4"> 
+                   <div class="main-port"> 
                         <img src="images/responsive_layout_v3-2/images/portfolio-5.png" alt="the-photo-gallery">
                         <p><strong>Photo Gallery</strong></p>
-                        <p>This project shows pictures from a recent trip to the viewer and allows them to easily navigate through photos.</p>
+                        <p class="heading-para">This project shows pictures from a recent trip to the viewer and allows them to easily navigate through photos.</p>
                         </div>
 
-                    <div class="main-port item-5">
+                    <div class="main-port">
                         <img src="images/responsive_layout_v3-2/images/portfolio-6.png" alt="the-calculator">
-                        <p><strong>Calculator</strong></p>
+                        <p class="heading-para"><strong>Calculator</strong></p>
                         <p>Someone can enter in the numbers they want, press the big blue button and get the result they want.</p>
                     </div>
                 </div> 
