--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
                     
                    <div class="main-port"> 
                         <img src="images/responsive_layout_v3-2/images/portfolio-5.png" alt="the-photo-gallery">
-                        <p><strong>Photo Gallery</strong></p>
-                        <p class="heading-para">This project shows pictures from a recent trip to the viewer and allows them to easily navigate through photos.</p>
+                        <p class="heading-para"><strong>Photo Gallery</strong></p>
+                        <p>This project shows pictures from a recent trip to the viewer and allows them to easily navigate through photos.</p>
                         </div>
 
                     <div class="main-port">
